@@ -9,6 +9,7 @@ Version 5.0.4
   Bug #25458 Opening connection hangs 
   Bug #25651 SELECT does not work properly when WHERE contains UTF-8 characters   
   Bug #25726 MySqlConnection throws NullReferenceException and ArgumentNullException 
+  Bug #25609 MySqlDataAdapter.FillSchema 
   
   Other changes
   -------------
